fix: Abyss: Some menulists were not showing any label due to being cut off
(integrated from komodo (trunk) change 81608 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13529 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/window.less
+++ b/src/chrome/komodo/skin/plat/shared/window.less
@@ -229,6 +229,7 @@ button:not([disabled]):not(.button-link):not([type="menu"]),
     {
         -moz-appearance: @menulist-appearance;
         min-height: 20px;
+        min-width: 40px;
         
         .menulist-editable-box
         {
